force-app/main/default/objects/Pedido_de_compra__c/Pedido_de_compra__c.object-meta.xml
<CustomObject>
    <label>Cotação de compra</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número da cotação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotações de compra</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>