force-app/main/default/objects/Pedido_de_compra__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <formula>IF(TEXT(Tipo_de_consumo__c) == &apos;Prestação de serviços&apos;, &apos;Serviço&apos;,
    IF(TEXT(Tipo__c) == &apos;Compra para consumo&apos;, &apos;Compra para consumo&apos;,
        IF(TEXT(Tipo__c) == &apos;Compra para revenda OPME&apos;, &apos;Compra para revenda&apos;,
            IF(TEXT(Tipo__c) == &apos;Compra para revenda&apos;, &apos;Compra para revenda&apos;, &apos;Compra para revenda&apos;)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria</label>
    <type>Text</type>
</CustomField>