force-app/main/default/objects/Pedido_de_compra__c/fields/Data_de_aprova_o__c.field-meta.xml
<CustomField>
    <fullName>Data_de_aprova_o__c</fullName>
    <label>Data de aprovação</label>
    <type>Date</type>
</CustomField>