force-app/main/default/objects/Pedido_de_compra__c/fields/Data_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_de_inicio__c</fullName>
    <label>Data de inicio</label>
    <type>Date</type>
</CustomField>