force-app/main/default/objects/Pedido_de_compra__c/fields/Entrega_CEP__c.field-meta.xml
<CustomField>
    <fullName>Entrega_CEP__c</fullName>
    <label>Entrega CEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>