force-app/main/default/objects/Pedido_de_compra__c/fields/Entrega_Cidade__c.field-meta.xml
<CustomField>
    <fullName>Entrega_Cidade__c</fullName>
    <label>Entrega Cidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>