force-app/main/default/objects/Pedido_de_compra__c/fields/Entrega_Estado__c.field-meta.xml
<CustomField>
    <fullName>Entrega_Estado__c</fullName>
    <label>Entrega Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>