force-app/main/default/objects/Pedido_de_compra__c/fields/Entrega_Pais__c.field-meta.xml
<CustomField>
    <fullName>Entrega_Pais__c</fullName>
    <label>Entrega País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>