force-app/main/default/objects/Pedido_de_compra__c/fields/Entrega_Rua__c.field-meta.xml
<CustomField>
    <fullName>Entrega_Rua__c</fullName>
    <label>Entrega Rua</label>
    <length>255</length>
    <type>Text</type>
</CustomField>