force-app/main/default/objects/Pedido_de_compra__c/fields/Fornecedores_com_anexo__c.field-meta.xml
<CustomField>
    <fullName>Fornecedores_com_anexo__c</fullName>
    <label>Fornecedores com anexo</label>
    <summaryFilterItems>
        <field>Fornecedor__c.URL_Anexo__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Fornecedor__c.Pedido_de_compra__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>