force-app/main/default/objects/Pedido_de_compra__c/fields/Justificativa_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Justificativa_de_compra__c</fullName>
    <label>Justificativa de compra</label>
    <type>TextArea</type>
</CustomField>