force-app/main/default/objects/Pedido_de_compra__c/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <label>Linha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMLS</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Ultrassom</fullName>
            </value>
            <value>
                <fullName>Veterinária</fullName>
            </value>
            <value>
                <fullName>OPME Zimmer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>