force-app/main/default/objects/Pedido_de_compra__c/fields/Local_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Local_de_entrega__c</fullName>
    <label>Local de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HEALTH SOLUTIONS R.89</fullName>
            </value>
            <value>
                <fullName>HOSPCOM BR 153</fullName>
            </value>
            <value>
                <fullName>HOSPCOM R.104</fullName>
            </value>
            <value>
                <fullName>HOSPCOM DF</fullName>
            </value>
            <value>
                <fullName>HOSPCOM SP</fullName>
            </value>
            <value>
                <fullName>HOSPCOM MT</fullName>
            </value>
            <value>
                <fullName>HEALTH R 89</fullName>
            </value>
            <value>
                <fullName>ABC TO</fullName>
            </value>
            <value>
                <fullName>ABC GO</fullName>
            </value>
            <value>
                <fullName>GDB MS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>