force-app/main/default/objects/Pedido_de_compra__c/fields/Nome_do_propriet_rio__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_propriet_rio__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do proprietário</label>
    <type>Text</type>
</CustomField>