force-app/main/default/objects/Pedido_de_compra__c/fields/OPME__c.field-meta.xml
<CustomField>
    <fullName>OPME__c</fullName>
    <label>OPME?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>