force-app/main/default/objects/Pedido_de_compra__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
                <default>true</default>
                <label>Nacional</label>
            </value>
            <value>
                <fullName>Internacional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>