force-app/main/default/objects/Pedido_de_compra__c/fields/Pagamento_antecipado__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_antecipado__c</fullName>
    <label>Pagamento antecipado</label>
    <summaryFilterItems>
        <field>Fornecedor__c.Pagamento_antecipado__c</field>
        <operation>equals</operation>
        <value>SIM</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Fornecedor__c.Status_do_PC__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </summaryFilterItems>
    <summaryForeignKey>Fornecedor__c.Pedido_de_compra__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>