force-app/main/default/objects/Pedido_de_compra__c/fields/Quantidade_requisitada__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_requisitada__c</fullName>
    <label>Quantidade requisitada</label>
    <summarizedField>Item_de_pedido_de_compra__c.Quantidade_requisitada__c</summarizedField>
    <summaryForeignKey>Item_de_pedido_de_compra__c.Pedido_de_compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>