force-app/main/default/objects/Pedido_de_compra__c/fields/Requisicao_Interna__c.field-meta.xml
<CustomField>
    <fullName>Requisicao_Interna__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Para pedidos de compra para consumo que tenham requisição interna no sistema.</inlineHelpText>
    <label>Requisição Interna</label>
    <referenceTo>Requisi_o_Interna__c</referenceTo>
    <relationshipLabel>Cotações de compra</relationshipLabel>
    <relationshipName>Cota_es_de_compra</relationshipName>
    <type>Lookup</type>
</CustomField>