force-app/main/default/objects/Pedido_de_compra__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Rascunho</fullName>
                <default>true</default>
                <label>1 - Rascunho</label>
            </value>
            <value>
                <fullName>2 - Em Andamento</fullName>
            </value>
            <value>
                <fullName>3 - Em Aprovação</fullName>
            </value>
            <value>
                <fullName>4 - Em aprovação financeira</fullName>
            </value>
            <value>
                <fullName>5 - Concluído</fullName>
            </value>
            <value>
                <fullName>6 - Reprovado</fullName>
            </value>
            <value>
                <fullName>7 - Cancelado</fullName>
            </value>
            <value>
                <fullName>4 - Compra em Andamento</fullName>
                <isActive>false</isActive>
                <label>4 - Compra em Andamento</label>
            </value>
            <value>
                <fullName>4 - Concluído</fullName>
                <isActive>false</isActive>
                <label>4 - Concluído</label>
            </value>
            <value>
                <fullName>5 - Reprovado</fullName>
                <isActive>false</isActive>
                <label>5 - Reprovado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>