force-app/main/default/objects/Pedido_de_compra__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compra para consumo</fullName>
            </value>
            <value>
                <fullName>Compra para estoque</fullName>
            </value>
            <value>
                <fullName>Compra para revenda</fullName>
            </value>
            <value>
                <fullName>Compra para revenda OPME</fullName>
            </value>
            <value>
                <fullName>Importação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>