force-app/main/default/objects/Pedido_de_compra__c/fields/Tipo_de_consumo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_consumo__c</fullName>
    <label>Tipo de consumo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prestação de serviços</fullName>
            </value>
            <value>
                <fullName>Produtos</fullName>
            </value>
            <value>
                <fullName>Locação de imóveis</fullName>
            </value>
            <value>
                <fullName>Patrocínio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>