force-app/main/default/objects/Pedido_de_compra__c/fields/Tipo_de_estoque__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_estoque__c</fullName>
    <label>Tipo de estoque</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenda</fullName>
            </value>
            <value>
                <fullName>Locação</fullName>
            </value>
            <value>
                <fullName>Assistência técnica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>