force-app/main/default/objects/Pedido_de_compra__c/fields/Todos_com_anexo__c.field-meta.xml
<CustomField>
    <fullName>Todos_com_anexo__c</fullName>
    <formula>Total_de_fornecedores__c =  Fornecedores_com_anexo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Todos com anexo</label>
    <type>Checkbox</type>
</CustomField>