force-app/main/default/objects/Pedido_de_compra__c/fields/Valor_total_cotado__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_cotado__c</fullName>
    <label>Valor total cotado</label>
    <summarizedField>Fornecedor__c.Valor_total_cotado__c</summarizedField>
    <summaryForeignKey>Fornecedor__c.Pedido_de_compra__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>