force-app/main/default/objects/Pedido_de_compra__c/validationRules/Tipo_importacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Tipo_importacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(Tipo__c, &apos;Importação&apos;)),
 ISPICKVAL(Requisicao_Interna__r.Tipo_de_Requisi_o__c,&apos;Importação&apos;)
)</errorConditionFormula>
    <errorDisplayField>Tipo__c</errorDisplayField>
    <errorMessage>❌A Cotação precisa ser do tipo &apos;Importação&apos; para requisições de importação.</errorMessage>
</ValidationRule>