force-app/main/default/objects/Pedido_de_compra__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descricao__c</columns>
    <columns>Data_de_inicio__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as Cotações</label>
</ListView>